syntax = "proto3";

package api.student.v1;
import "google/api/annotations.proto";
option go_package = "/api/student/v1;v1";
option java_multiple_files = true;
option java_package = "api.student.v1";

service Student {
	rpc CreateStudent (CreateStudentRequest) returns (CreateStudentReply) {};
	rpc UpdateStudent (UpdateStudentRequest) returns (UpdateStudentReply);
	rpc DeleteStudent (DeleteStudentRequest) returns (DeleteStudentReply);
	rpc GetStudent (GetStudentRequest) returns (GetStudentReply);
	rpc ListStudent (ListStudentRequest) returns (ListStudentReply);

	rpc Hello (HelloReq) returns (HelloResp) {
		option (google.api.http) = {
			get: "/hello/nihao"
		};
	}
}

message CreateStudentRequest {}
message CreateStudentReply {}

message UpdateStudentRequest {}
message UpdateStudentReply {}

message DeleteStudentRequest {}
message DeleteStudentReply {}

message GetStudentRequest {}
message GetStudentReply {}

message ListStudentRequest {}
message ListStudentReply {}

message HelloReq {
	string name = 1;
}
message HelloResp {
	string message = 1;
}